Empezando a acomdar el catálogo

--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 
 # Maquillando las url
 RewriteRule ^home$ index.php
-RewriteRule ^productos$ index.php?id=1314
+RewriteRule ^productos$ index.php?id=1190
 RewriteRule ^gracias$ index.php?id=1330
 RewriteRule ^carrito$ index.php?id=1331
 RewriteRule ^acceso$ index.php?id=1332
@@ -15,7 +15,7 @@ RewriteRule ^pedidos$ index.php?id=1335
 RewriteRule ^logout$ index.php?logout
 
 
-RewriteRule ^productos/([0-9]+)/([a-zA-Z0-9_-]+)$ index.php?id=$1
+RewriteRule ^productos/([0-9]+)/([a-zA-Z0-9_-ñáéíóú]+)$ index.php?id=$1
 
 #RewriteRule ^([a-zA-Z0-9_-]+)-([0-9]+)$ index.php?id=13&hijo=$2
 
