--- a/.htaccess
+++ b/.htaccess
@@ -15,7 +15,7 @@ RewriteRule ^pedidos$ index.php?id=1335
 RewriteRule ^logout$ index.php?logout
 
 
-RewriteRule ^productos/([0-9]+)/([a-zA-Z0-9_-ñáéíó+ú]+)$ index.php?id=$1
+RewriteRule ^productos/([0-9]+)/([a-zA-Z0-9_-ñáéíó+ú&]+)$ index.php?id=$1
 
 #RewriteRule ^([a-zA-Z0-9_-]+)-([0-9]+)$ index.php?id=13&hijo=$2
 
