--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ RewriteRule ^acceso$ index.php?id=1332
 RewriteRule ^finalizar-pago$ index.php?id=1333
 RewriteRule ^confirmacion-pago$ index.php?id=1334
 RewriteRule ^pedidos$ index.php?id=1335
+RewriteRule ^quienes-somos$ index.php?id=13
 
 
 RewriteRule ^logout$ index.php?logout
